# vfs-shell-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  script.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_old.md
src/: commands.py  context.py  engine.py  exceptions.py  formatter.py  models.py  parser.py  security.py  types.py
tests/: test_commands.py  test_context.py  test_engine.py  test_formatter.py  test_models.py  test_parser.py  test_security.py
