[project]
name = "vfs-shell"
version = "0.1.0"
description = ""
authors = [
    {name = "romanplakhota",email = "loram.hoptan@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich (>=14.3.3,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.ruff]

exclude = [
    ".venv",
    "pycache",
    ".pytest_cache",
    ".ruff_cache",
    ".env",
    ".env.*",
    "docs"
]

line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "PL", "B", "N", "ANN"]

ignore = ["N818"]
